Use -Xmx6g
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>